--- a/index.html
+++ b/index.html
@@ -287,6 +287,85 @@ Environmental stressors directly influence cognitive clarity and executive funct
 </section>
 
 
+   <!-- Framework - Option 1 -->
+
+  <section class="framework-section">
+  <div class="container">
+    <h2 class="section-title">Our Structured Human Capital Architecture</h2>
+    <p class="section-subtitle">
+      A structured, outcome-driven methodology designed to transform people operations into scalable infrastructure.
+    </p>
+
+    <div class="framework-linear">
+
+      <div class="framework-step">
+        <div class="step-number">01</div>
+        <h3>Discover & Audit</h3>
+        <p>Structured operational and cultural audit to identify structural gaps, capability risks, and alignment breakdowns.</p>
+      </div>
+
+      <div class="framework-step">
+        <div class="step-number">02</div>
+        <h3>Infrastructure Design</h3>
+        <p>Architect scalable HR structures using systems-engineering principles and governance frameworks.</p>
+      </div>
+
+      <div class="framework-step">
+        <div class="step-number">03</div>
+        <h3>Strategic Implementation</h3>
+        <p>Operationalize policies, workflows, and leadership alignment with structured change management.</p>
+      </div>
+
+      <div class="framework-step">
+        <div class="step-number">04</div>
+        <h3>Measure & Optimize</h3>
+        <p>Continuous performance analytics and executive dashboards ensuring measurable P&L impact.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+ <!-- Framework - Option 3 -->
+  
+  <section class="framework-section">
+  <div class="container">
+    <h2 class="section-title">Our Structured Human Capital Architecture</h2>
+    <p class="section-subtitle">
+      A structured, outcome-driven methodology designed to transform people operations into scalable infrastructure.
+    </p>
+
+    <div class="framework-circular">
+
+      <div class="circle-center">
+        <h3>Discover & Audit</h3>
+        <p>Structured operational and cultural audit identifying structural gaps and alignment risks.</p>
+      </div>
+
+      <div class="circle-step step-1">
+        <span>01</span>
+        <p>Discover & Audit</p>
+      </div>
+
+      <div class="circle-step step-2">
+        <span>02</span>
+        <p>Infrastructure Design</p>
+      </div>
+
+      <div class="circle-step step-3">
+        <span>03</span>
+        <p>Strategic Implementation</p>
+      </div>
+
+      <div class="circle-step step-4">
+        <span>04</span>
+        <p>Measure & Optimize</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
 
   <!------------ A Smarter Approach to Human Resources -------------->
