--- a/index.html
+++ b/index.html
@@ -328,41 +328,34 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
  <!-- Framework - Option 3 -->
   
-  <section class="framework-section">
-  <div class="container">
-    <h2 class="section-title">Our Structured Human Capital Architecture</h2>
-    <p class="section-subtitle">
-      A structured, outcome-driven methodology designed to transform people operations into scalable infrastructure.
-    </p>
+ <section class="hc-framework">
+  <h2>Our Structured Human Capital Architecture</h2>
+  <p class="framework-subtitle">
+    A structured, outcome-driven methodology designed to transform people operations into scalable infrastructure.
+  </p>
 
-    <div class="framework-circular">
+  <div class="framework-circle">
 
-      <div class="circle-center">
-        <h3>Discover & Audit</h3>
-        <p>Structured operational and cultural audit identifying structural gaps and alignment risks.</p>
-      </div>
-
-      <div class="circle-step step-1">
-        <span>01</span>
-        <p>Discover & Audit</p>
-      </div>
-
-      <div class="circle-step step-2">
-        <span>02</span>
-        <p>Infrastructure Design</p>
-      </div>
-
-      <div class="circle-step step-3">
-        <span>03</span>
-        <p>Strategic Implementation</p>
-      </div>
-
-      <div class="circle-step step-4">
-        <span>04</span>
-        <p>Measure & Optimize</p>
-      </div>
-
+    <div class="step step-1">
+      <span>01</span>
+      <h4>Discover & Audit</h4>
     </div>
+
+    <div class="step step-2">
+      <span>02</span>
+      <h4>Infrastructure Design</h4>
+    </div>
+
+    <div class="step step-3">
+      <span>03</span>
+      <h4>Strategic Implementation</h4>
+    </div>
+
+    <div class="step step-4">
+      <span>04</span>
+      <h4>Measure & Optimize</h4>
+    </div>
+
   </div>
 </section>
 
