--- a/index.html
+++ b/index.html
@@ -286,79 +286,59 @@ Environmental stressors directly influence cognitive clarity and executive funct
   </div>
 </section>
 
-
-   <!-- Framework - Option 1 -->
-
-  <section class="framework-section">
+<!-- Strategic Architecture Framework -->
+  
+ <section class="hc-architecture">
   <div class="container">
+    
     <h2 class="section-title">Our Structured Human Capital Architecture</h2>
     <p class="section-subtitle">
-      A structured, outcome-driven methodology designed to transform people operations into scalable infrastructure.
+      A systems-engineered methodology designed to transform people operations into scalable infrastructure.
     </p>
 
-    <div class="framework-linear">
+    <div class="architecture-wrapper">
 
-      <div class="framework-step">
-        <div class="step-number">01</div>
-        <h3>Discover & Audit</h3>
-        <p>Structured operational and cultural audit to identify structural gaps, capability risks, and alignment breakdowns.</p>
+      <!-- Center Hub -->
+      <div class="architecture-center">
+        <h3>Scalable Human Capital Infrastructure</h3>
+        <p>Engineered systems. Measurable outcomes. Sustained growth.</p>
       </div>
 
-      <div class="framework-step">
-        <div class="step-number">02</div>
-        <h3>Infrastructure Design</h3>
-        <p>Architect scalable HR structures using systems-engineering principles and governance frameworks.</p>
+      <!-- Step 1 -->
+      <div class="architecture-step step-1">
+        <span class="step-number">01</span>
+        <h4>Discover & Audit</h4>
+        <p>Structured operational and cultural audit identifying structural gaps and capability risks.</p>
       </div>
 
-      <div class="framework-step">
-        <div class="step-number">03</div>
-        <h3>Strategic Implementation</h3>
-        <p>Operationalize policies, workflows, and leadership alignment with structured change management.</p>
+      <!-- Step 2 -->
+      <div class="architecture-step step-2">
+        <span class="step-number">02</span>
+        <h4>Infrastructure Design</h4>
+        <p>Architect scalable governance models, workflows, and enabling technologies.</p>
       </div>
 
-      <div class="framework-step">
-        <div class="step-number">04</div>
-        <h3>Measure & Optimize</h3>
-        <p>Continuous performance analytics and executive dashboards ensuring measurable P&L impact.</p>
+      <!-- Step 3 -->
+      <div class="architecture-step step-3">
+        <span class="step-number">03</span>
+        <h4>Strategic Implementation</h4>
+        <p>Deploy structured policies and align leadership through disciplined execution.</p>
+      </div>
+
+      <!-- Step 4 -->
+      <div class="architecture-step step-4">
+        <span class="step-number">04</span>
+        <h4>Measure & Optimize</h4>
+        <p>Continuous analytics and executive dashboards ensuring measurable P&L impact.</p>
       </div>
 
     </div>
   </div>
 </section>
 
- <!-- Framework - Option 3 -->
+
+
   
- <section class="hc-framework">
-  <h2>Our Structured Human Capital Architecture</h2>
-  <p class="framework-subtitle">
-    A structured, outcome-driven methodology designed to transform people operations into scalable infrastructure.
-  </p>
-
-  <div class="framework-circle">
-
-    <div class="step step-1">
-      <span>01</span>
-      <h4>Discover & Audit</h4>
-    </div>
-
-    <div class="step step-2">
-      <span>02</span>
-      <h4>Infrastructure Design</h4>
-    </div>
-
-    <div class="step step-3">
-      <span>03</span>
-      <h4>Strategic Implementation</h4>
-    </div>
-
-    <div class="step step-4">
-      <span>04</span>
-      <h4>Measure & Optimize</h4>
-    </div>
-
-  </div>
-</section>
-
 
 
   <!------------ A Smarter Approach to Human Resources -------------->
