--- a/index.html
+++ b/index.html
@@ -286,103 +286,106 @@ Environmental stressors directly influence cognitive clarity and executive funct
   </div>
 </section>
 
-<!-- Strategic Architecture Framework -->
-  
- <section class="hc-architecture">
+
+<!------------ Blueprint Architecture Grid (Circular Core) -------------->
+
+  <section class="framework-blueprint">
   <div class="container">
-    
     <h2 class="section-title">Our Structured Human Capital Architecture</h2>
     <p class="section-subtitle">
       A systems-engineered methodology designed to transform people operations into scalable infrastructure.
     </p>
 
-    <div class="architecture-wrapper">
+    <div class="blueprint-wrapper">
 
-      <!-- Center Hub -->
-      <div class="architecture-center">
-        <h3>Scalable Human Capital Infrastructure</h3>
+      <!-- Center Circle -->
+      <div class="blueprint-core">
+        <h3>Scalable Human<br>Capital Infrastructure</h3>
         <p>Engineered systems. Measurable outcomes. Sustained growth.</p>
       </div>
 
       <!-- Step 1 -->
-      <div class="architecture-step step-1">
-        <span class="step-number">01</span>
-        <h4>Discover & Audit</h4>
-        <p>Structured operational and cultural audit identifying structural gaps and capability risks.</p>
-      </div>
-
-      <!-- Step 2 -->
-      <div class="architecture-step step-2">
-        <span class="step-number">02</span>
-        <h4>Infrastructure Design</h4>
-        <p>Architect scalable governance models, workflows, and enabling technologies.</p>
-      </div>
-
-      <!-- Step 3 -->
-      <div class="architecture-step step-3">
-        <span class="step-number">03</span>
-        <h4>Strategic Implementation</h4>
-        <p>Deploy structured policies and align leadership through disciplined execution.</p>
-      </div>
-
-      <!-- Step 4 -->
-      <div class="architecture-step step-4">
-        <span class="step-number">04</span>
-        <h4>Measure & Optimize</h4>
-        <p>Continuous analytics and executive dashboards ensuring measurable P&L impact.</p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-
-
-  <!-- Structured Geometric Flow (Premium Systems Layout) -->
-
-  <section class="hc-framework-geo">
-  <div class="container">
-
-    <h2 class="section-title">Our Structured Human Capital Architecture</h2>
-    <p class="section-subtitle">
-      A systems-engineered methodology designed to transform people operations into scalable infrastructure.
-    </p>
-
-    <div class="geo-wrapper">
-
-      <!-- Step 1 -->
-      <div class="geo-step geo-1">
+      <div class="blueprint-step step-1">
         <span>01</span>
         <h4>Discover & Audit</h4>
         <p>Structured operational and cultural audit identifying structural gaps and capability risks.</p>
       </div>
 
       <!-- Step 2 -->
-      <div class="geo-step geo-2">
+      <div class="blueprint-step step-2">
         <span>02</span>
         <h4>Infrastructure Design</h4>
         <p>Architect scalable governance models, workflows, and enabling technologies.</p>
       </div>
 
       <!-- Step 3 -->
-      <div class="geo-step geo-3">
+      <div class="blueprint-step step-3">
         <span>03</span>
         <h4>Strategic Implementation</h4>
         <p>Deploy structured policies and align leadership through disciplined execution.</p>
       </div>
 
       <!-- Step 4 -->
-      <div class="geo-step geo-4">
+      <div class="blueprint-step step-4">
         <span>04</span>
         <h4>Measure & Optimize</h4>
         <p>Continuous analytics ensuring measurable P&L impact.</p>
       </div>
 
     </div>
-
   </div>
 </section>
 
+
+  
+<!------------ Vertical Transformation Spine (Directional Process Flow) -------------->
+
+  <section class="framework-spine">
+  <div class="container">
+    <h2 class="section-title">Our Structured Human Capital Architecture</h2>
+    <p class="section-subtitle">
+      A structured, outcome-driven transformation pathway.
+    </p>
+
+    <div class="spine-wrapper">
+
+      <div class="spine-line"></div>
+
+      <div class="spine-step">
+        <div class="spine-number">01</div>
+        <div class="spine-content">
+          <h4>Discover & Audit</h4>
+          <p>Structured operational and cultural audit identifying structural gaps and risks.</p>
+        </div>
+      </div>
+
+      <div class="spine-step">
+        <div class="spine-number">02</div>
+        <div class="spine-content">
+          <h4>Infrastructure Design</h4>
+          <p>Architect governance models, workflows, and enabling technology frameworks.</p>
+        </div>
+      </div>
+
+      <div class="spine-step">
+        <div class="spine-number">03</div>
+        <div class="spine-content">
+          <h4>Strategic Implementation</h4>
+          <p>Deploy structured policies and align leadership with disciplined execution.</p>
+        </div>
+      </div>
+
+      <div class="spine-step">
+        <div class="spine-number">04</div>
+        <div class="spine-content">
+          <h4>Measure & Optimize</h4>
+          <p>Continuous analytics ensuring measurable P&L impact.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
   <!------------ A Smarter Approach to Human Resources -------------->
