--- a/index.html
+++ b/index.html
@@ -342,50 +342,67 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
   <section class="framework-spine">
   <div class="container">
-    <h2 class="section-title">Our Structured Human Capital Architecture</h2>
+
+    <h2 class="section-title">
+      Our Structured Human Capital Architecture
+    </h2>
+
     <p class="section-subtitle">
-      A structured, outcome-driven transformation pathway.
+      A systems-engineered methodology designed to transform people operations into scalable infrastructure.
     </p>
 
     <div class="spine-wrapper">
 
       <div class="spine-line"></div>
 
-      <div class="spine-step">
-        <div class="spine-number">01</div>
-        <div class="spine-content">
-          <h4>Discover & Audit</h4>
-          <p>Structured operational and cultural audit identifying structural gaps and risks.</p>
+      <!-- Step 1 -->
+      <div class="spine-step left">
+        <div class="step-number green">01</div>
+        <div class="step-card">
+          <h3>Discover & Audit</h3>
+          <p>
+            Structured operational and cultural audit identifying structural gaps and capability risks.
+          </p>
         </div>
       </div>
 
-      <div class="spine-step">
-        <div class="spine-number">02</div>
-        <div class="spine-content">
-          <h4>Infrastructure Design</h4>
-          <p>Architect governance models, workflows, and enabling technology frameworks.</p>
+      <!-- Step 2 -->
+      <div class="spine-step right">
+        <div class="step-number gold">02</div>
+        <div class="step-card">
+          <h3>Infrastructure Design</h3>
+          <p>
+            Architect scalable governance models, workflows, and enabling technologies.
+          </p>
         </div>
       </div>
 
-      <div class="spine-step">
-        <div class="spine-number">03</div>
-        <div class="spine-content">
-          <h4>Strategic Implementation</h4>
-          <p>Deploy structured policies and align leadership with disciplined execution.</p>
+      <!-- Step 3 -->
+      <div class="spine-step left">
+        <div class="step-number blue">03</div>
+        <div class="step-card">
+          <h3>Strategic Implementation</h3>
+          <p>
+            Deploy structured policies and align leadership through disciplined execution.
+          </p>
         </div>
       </div>
 
-      <div class="spine-step">
-        <div class="spine-number">04</div>
-        <div class="spine-content">
-          <h4>Measure & Optimize</h4>
-          <p>Continuous analytics ensuring measurable P&L impact.</p>
+      <!-- Step 4 -->
+      <div class="spine-step right">
+        <div class="step-number green">04</div>
+        <div class="step-card">
+          <h3>Measure & Optimize</h3>
+          <p>
+            Continuous analytics ensuring measurable P&L impact.
+          </p>
         </div>
       </div>
 
     </div>
   </div>
 </section>
+
 
 
   <!------------ A Smarter Approach to Human Resources -------------->
