--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <h4>Measure & Optimize</h4>
         <p>Continuous analytics ensuring measurable P&L impact.</p>
       </div>
-
+<div class="process-arrow"></div>
     </div>
   </div>
 </section>
