--- a/index.html
+++ b/index.html
@@ -331,7 +331,13 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <h4>Measure & Optimize</h4>
         <p>Continuous analytics ensuring measurable P&L impact.</p>
       </div>
-<div class="process-arrow"></div>
+
+        <!-- MICRO ARROWS (ADD HERE) -->
+  <div class="arrow arrow-1"></div>
+  <div class="arrow arrow-2"></div>
+  <div class="arrow arrow-3"></div>
+  <div class="arrow arrow-4"></div>
+      
     </div>
   </div>
 </section>
