--- a/index.html
+++ b/index.html
@@ -298,6 +298,67 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
     <div class="blueprint-wrapper">
 
+      <svg class="process-arcs" viewBox="0 0 600 600">
+
+  <defs>
+    <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+      <stop offset="0%" stop-color="#2bb673"/>
+      <stop offset="100%" stop-color="#d4a73f"/>
+    </linearGradient>
+
+    <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
+      <stop offset="0%" stop-color="#d4a73f"/>
+      <stop offset="100%" stop-color="#2c7be5"/>
+    </linearGradient>
+
+    <linearGradient id="grad3" x1="0%" y1="0%" x2="100%" y2="0%">
+      <stop offset="0%" stop-color="#2c7be5"/>
+      <stop offset="100%" stop-color="#2bb673"/>
+    </linearGradient>
+  </defs>
+
+  <!-- 01 → 02 -->
+  <path d="M300 60 A240 240 0 0 1 540 300"
+        stroke="url(#grad1)"
+        stroke-width="3"
+        fill="none"
+        marker-end="url(#arrow)" />
+
+  <!-- 02 → 03 -->
+  <path d="M540 300 A240 240 0 0 1 300 540"
+        stroke="url(#grad2)"
+        stroke-width="3"
+        fill="none"
+        marker-end="url(#arrow)" />
+
+  <!-- 03 → 04 -->
+  <path d="M300 540 A240 240 0 0 1 60 300"
+        stroke="url(#grad3)"
+        stroke-width="3"
+        fill="none"
+        marker-end="url(#arrow)" />
+
+  <!-- 04 → 01 -->
+  <path d="M60 300 A240 240 0 0 1 300 60"
+        stroke="url(#grad1)"
+        stroke-width="3"
+        fill="none"
+        marker-end="url(#arrow)" />
+
+  <defs>
+    <marker id="arrow"
+            markerWidth="8"
+            markerHeight="8"
+            refX="5"
+            refY="3"
+            orient="auto">
+      <polygon points="0 0, 6 3, 0 6" fill="#2c7be5"/>
+    </marker>
+  </defs>
+
+</svg>
+
+
       <!-- Center Circle -->
       <div class="blueprint-core">
         <h3>Scalable Human<br>Capital Infrastructure</h3>
@@ -331,12 +392,6 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <h4>Measure & Optimize</h4>
         <p>Continuous analytics ensuring measurable P&L impact.</p>
       </div>
-
-        <!-- MICRO ARROWS (ADD HERE) -->
-  <div class="arrow arrow-1"></div>
-  <div class="arrow arrow-2"></div>
-  <div class="arrow arrow-3"></div>
-  <div class="arrow arrow-4"></div>
       
     </div>
   </div>
