--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
     <div class="blueprint-wrapper">
 
-      <svg class="process-arcs" viewBox="0 0 600 600">
+            <svg class="process-arcs" viewBox="0 0 600 600"
+              preserveAspectRatio="xMidYMid meet">
 
   <defs>
     <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
