--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
     <div class="blueprint-wrapper">
 
-           <svg class="process-arcs" viewBox="0 0 600 600" width="600" height="600" preserveAspectRatio="xMidYMid meet">
+          <svg class="process-arcs" viewBox="0 0 600 600" width="600" height="600" preserveAspectRatio="xMidYMid meet">
   <defs>
     <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
       <stop offset="0%" stop-color="#2bb673"/>
@@ -317,20 +317,20 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </marker>
   </defs>
 
-  <!-- 01 → 02 (top to right) -->
-  <path d="M395.8 36.8 A280 280 0 0 1 563.2 204.2"
+  <!-- 01 (top) → 02 (right) – start 10° after step1, end 10° before step2 -->
+  <path d="M347.3 51.5 A280 280 0 0 1 552.7 234.5"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 02 → 03 (right to bottom) -->
-  <path d="M563.2 395.8 A280 280 0 0 1 395.8 563.2"
+  <!-- 02 (right) → 03 (bottom) -->
+  <path d="M552.7 365.5 A280 280 0 0 1 347.3 548.5"
         stroke="url(#grad2)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 03 → 04 (bottom to left) -->
-  <path d="M204.2 563.2 A280 280 0 0 1 36.8 395.8"
+  <!-- 03 (bottom) → 04 (left) -->
+  <path d="M252.7 548.5 A280 280 0 0 1 47.3 365.5"
         stroke="url(#grad3)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 04 → 01 (left to top) -->
-  <path d="M36.8 204.2 A280 280 0 0 1 204.2 36.8"
+  <!-- 04 (left) → 01 (top) -->
+  <path d="M47.3 234.5 A280 280 0 0 1 252.7 51.5"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 </svg>
 
