--- a/index.html
+++ b/index.html
@@ -317,20 +317,20 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </marker>
   </defs>
 
-  <!-- 01 (top) → 02 (right) – start 10° after step1, end 10° before step2 -->
-  <path d="M347.3 51.5 A280 280 0 0 1 552.7 234.5"
+  <!-- 01 (top) → 02 (right) – 25° gap -->
+  <path d="M418.3 46.2 A280 280 0 0 1 553.8 181.7"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
   <!-- 02 (right) → 03 (bottom) -->
-  <path d="M552.7 365.5 A280 280 0 0 1 347.3 548.5"
+  <path d="M553.8 418.3 A280 280 0 0 1 418.3 553.8"
         stroke="url(#grad2)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
   <!-- 03 (bottom) → 04 (left) -->
-  <path d="M252.7 548.5 A280 280 0 0 1 47.3 365.5"
+  <path d="M181.7 553.8 A280 280 0 0 1 46.2 418.3"
         stroke="url(#grad3)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
   <!-- 04 (left) → 01 (top) -->
-  <path d="M47.3 234.5 A280 280 0 0 1 252.7 51.5"
+  <path d="M46.2 181.7 A280 280 0 0 1 181.7 46.2"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 </svg>
 
