--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
     <div class="blueprint-wrapper">
 
-          <svg class="process-arcs" viewBox="0 0 600 600" width="600" height="600" preserveAspectRatio="xMidYMid meet">
+         <svg class="process-arcs" viewBox="-20 -20 640 640" width="600" height="600" preserveAspectRatio="xMidYMid meet">
   <defs>
     <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
       <stop offset="0%" stop-color="#2bb673"/>
@@ -317,20 +317,20 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </marker>
   </defs>
 
-  <!-- 01 (top) → 02 (right) – 25° gap -->
-  <path d="M418.3 46.2 A280 280 0 0 1 553.8 181.7"
+  <!-- 01 → 02 (top to right) -->
+  <path d="M409.4 0.0 A320 320 0 0 1 600.7 190.6"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 02 (right) → 03 (bottom) -->
-  <path d="M553.8 418.3 A280 280 0 0 1 418.3 553.8"
+  <!-- 02 → 03 (right to bottom) -->
+  <path d="M600.7 409.4 A320 320 0 0 1 409.4 600.0"
         stroke="url(#grad2)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 03 (bottom) → 04 (left) -->
-  <path d="M181.7 553.8 A280 280 0 0 1 46.2 418.3"
+  <!-- 03 → 04 (bottom to left) -->
+  <path d="M190.6 600.0 A320 320 0 0 1 0.0 409.4"
         stroke="url(#grad3)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 04 (left) → 01 (top) -->
-  <path d="M46.2 181.7 A280 280 0 0 1 181.7 46.2"
+  <!-- 04 → 01 (left to top) -->
+  <path d="M0.0 190.6 A320 320 0 0 1 190.6 0.0"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 </svg>
 
