--- a/index.html
+++ b/index.html
@@ -317,20 +317,20 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </marker>
   </defs>
 
-  <!-- 01 → 02 (top to right) -->
-  <path d="M409.4 0.0 A320 320 0 0 1 600.7 190.6"
+  <!-- 01 (top) → 02 (right) – 30° gap -->
+  <path d="M460 22.9 A320 320 0 0 1 577.1 140"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 02 → 03 (right to bottom) -->
-  <path d="M600.7 409.4 A320 320 0 0 1 409.4 600.0"
+  <!-- 02 (right) → 03 (bottom) -->
+  <path d="M577.1 460 A320 320 0 0 1 460 577.1"
         stroke="url(#grad2)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 03 → 04 (bottom to left) -->
-  <path d="M190.6 600.0 A320 320 0 0 1 0.0 409.4"
+  <!-- 03 (bottom) → 04 (left) -->
+  <path d="M140 577.1 A320 320 0 0 1 22.9 460"
         stroke="url(#grad3)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 
-  <!-- 04 → 01 (left to top) -->
-  <path d="M0.0 190.6 A320 320 0 0 1 190.6 0.0"
+  <!-- 04 (left) → 01 (top) -->
+  <path d="M22.9 140 A320 320 0 0 1 140 22.9"
         stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
 </svg>
 
