--- a/index.html
+++ b/index.html
@@ -318,21 +318,34 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </marker>
   </defs>
 
-  <!-- 01 (top) → 02 (right) – 28° gap -->
-  <path d="M471.5 32.4 A320 320 0 0 1 567.6 128.5"
-        stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
+  <!-- 01 → 02 -->
+<path d="M300 70 A230 230 0 0 1 530 300"
+      stroke="url(#grad1)"
+      stroke-width="3"
+      fill="none"
+      marker-end="url(#arrow)" />
 
-  <!-- 02 (right) → 03 (bottom) -->
-  <path d="M567.6 471.5 A320 320 0 0 1 471.5 567.6"
-        stroke="url(#grad2)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
+<!-- 02 → 03 -->
+<path d="M530 300 A230 230 0 0 1 300 530"
+      stroke="url(#grad2)"
+      stroke-width="3"
+      fill="none"
+      marker-end="url(#arrow)" />
 
-  <!-- 03 (bottom) → 04 (left) -->
-  <path d="M128.5 567.6 A320 320 0 0 1 32.4 471.5"
-        stroke="url(#grad3)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
+<!-- 03 → 04 -->
+<path d="M300 530 A230 230 0 0 1 70 300"
+      stroke="url(#grad3)"
+      stroke-width="3"
+      fill="none"
+      marker-end="url(#arrow)" />
 
-  <!-- 04 (left) → 01 (top) -->
-  <path d="M32.4 128.5 A320 320 0 0 1 128.5 32.4"
-        stroke="url(#grad1)" stroke-width="3" fill="none" marker-end="url(#arrow)" />
+<!-- 04 → 01 -->
+<path d="M70 300 A230 230 0 0 1 300 70"
+      stroke="url(#grad1)"
+      stroke-width="3"
+      fill="none"
+      marker-end="url(#arrow)" />
+
 </svg>
 
       <!-- Center Circle -->
