--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
     <div class="blueprint-wrapper">
 
-    <svg class="process-arcs"
+   <svg class="process-arcs"
      viewBox="0 0 600 600"
      width="600"
      height="600"
@@ -330,37 +330,38 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </marker>
   </defs>
 
-  <!-- Radius now 220 (tighter + aligned with 220px center circle logic) -->
+  <!-- Radius 210 | Center 300,300 -->
 
   <!-- 01 → 02 -->
-  <path d="M435 90 A220 220 0 0 1 510 165"
+  <path d="M300 90 A210 210 0 0 1 510 300"
         stroke="url(#grad1)"
         stroke-width="3"
         fill="none"
         marker-end="url(#arrow)" />
 
   <!-- 02 → 03 -->
-  <path d="M520 435 A220 220 0 0 1 435 510"
+  <path d="M510 300 A210 210 0 0 1 300 510"
         stroke="url(#grad2)"
         stroke-width="3"
         fill="none"
         marker-end="url(#arrow)" />
 
   <!-- 03 → 04 -->
-  <path d="M165 510 A220 220 0 0 1 90 435"
+  <path d="M300 510 A210 210 0 0 1 90 300"
         stroke="url(#grad3)"
         stroke-width="3"
         fill="none"
         marker-end="url(#arrow)" />
 
   <!-- 04 → 01 -->
-  <path d="M80 165 A220 220 0 0 1 165 90"
+  <path d="M90 300 A210 210 0 0 1 300 90"
         stroke="url(#grad1)"
         stroke-width="3"
         fill="none"
         marker-end="url(#arrow)" />
 
 </svg>
+
 
 
 
