--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="capability-block">
         <h3>Institutional Capability</h3>
         <ul>
-          <li>90+ years collective enterprise leadership</li>
+          <li>Founder-led advisory with 40+ years of collective enterprise experience</li>
           <li>Multi-market execution across India & GCC</li>
           <li>Systems impacting 10,000+ employees</li>
         </ul>
@@ -430,17 +430,17 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
         <div class="industry-item">
           <h4>Energy & Telecom Conglomerates</h4>
-          <p>Enterprise-wide mental health transformation impacting over 10,000+ employees.</p>
+          <p>Enterprise-wide mental health restructuring and leadership development for 10,000+ employees.</p>
         </div>
 
         <div class="industry-item">
           <h4>Global Aviation & Luxury Hospitality</h4>
-          <p>Crisis leadership and resilience architecture for high-stress operations.</p>
+          <p>Crisis management and high-stress resilience training for frontline staff</p>
         </div>
 
         <div class="industry-item">
           <h4>Tier-1 Infrastructure & BFSI</h4>
-          <p>Digital HR transformation and cognitive infrastructure auditing.</p>
+          <p>Digital transformation  of HR workflows and cognitive workspace auditing.</p>
         </div>
       </div>
 
