--- a/index.html
+++ b/index.html
@@ -430,17 +430,17 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
         <div class="industry-item">
           <h4>Energy & Telecom Conglomerates</h4>
-          <p>Enterprise-wide mental health restructuring and leadership development for 10,000+ employees.</p>
+          <p>Enterprise-wide mental health transformation and leadership architecture, impacting over 10,000+ employees. </p>
         </div>
 
         <div class="industry-item">
           <h4>Global Aviation & Luxury Hospitality</h4>
-          <p>Crisis management and high-stress resilience training for frontline staff</p>
+          <p>Crisis leadership frameworks and high-stress resilience architecture designed for frontline operations.</p>
         </div>
 
         <div class="industry-item">
           <h4>Tier-1 Infrastructure & BFSI</h4>
-          <p>Digital transformation  of HR workflows and cognitive workspace auditing.</p>
+          <p>Digital HR transformation and cognitive infrastructure auditing driving operational excellence.</p>
         </div>
       </div>
 
