--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
           </div>
            
         </div>
+    </div>
 
     <!-- ROW 2: Industry Footprint -->
   <div class="industry-row">
