--- a/index.html
+++ b/index.html
@@ -395,6 +395,10 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <!-- LEFT SIDE -->
       <div class="difference-left">
 
+          <h3 class="difference-subheading">
+    Why Organizations Choose Lakeside
+  </h3>
+
         <ul class="difference-list">
           <li>
             <h4>Human Capital Architecture</h4>
