--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <ul class="difference-list">
           <li>
             <h4>Human Capital Architecture</h4>
-            <p>Scalable people systems aligned to governance, leadership, and enterprise growth.</p>
+            <p>Enterprise-grade people architecture aligned to governance, leadership, and long-term institutional scalability.</p>
           </li>
 
           <li>
@@ -464,7 +464,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
           </div>
 
           <div class="industry-mini-card">
-            <h4>Tier-1 Infrastructure & BFSI</h4>
+            <h4>Tier-1 Infrastructure & Financial Institutions</h4>
             <p>Digital HR transformation and cognitive infrastructure auditing driving operational excellence.</p>
           </div>
 
