--- a/index.html
+++ b/index.html
@@ -433,15 +433,16 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
         <div class="capability-cards">
       <div class="cap-card">
-         <p>Founder-led advisory with 40+ years of collective enterprise experience</p>
+        <span class="cap-highlight">40+ Years</span>
+         <p>Founder-led advisory with collective enterprise experience</p>
           </div>
 
           <div class="cap-card">
-         <p>Multi-market execution across India & GCC</p>
+         <p>Multi-market execution across</p> <span class="cap-highlight">India & GCC</span>
           </div>
 
              <div class="cap-card">
-         <p>Systems impacting 10,000+ employees</p>
+         <p>Systems impacting</p> <span class="cap-highlight">10,000+ employees</span>
           </div>
            
         </div>
