--- a/index.html
+++ b/index.html
@@ -438,11 +438,13 @@ Environmental stressors directly influence cognitive clarity and executive funct
           </div>
 
           <div class="cap-card">
-         <p>Multi-market execution across</p> <span class="cap-highlight">India & GCC</span>
+         <span class="cap-highlight">India & GCC</span>
+            <p>Multi-market execution across regions </p> 
           </div>
 
              <div class="cap-card">
-         <p>Systems impacting</p> <span class="cap-highlight">10,000+ employees</span>
+               <span class="cap-highlight">10,000+ employees</span>
+         <p>Systems impacting enterprise workforce scale </p> 
           </div>
            
         </div>
