--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <div class="capability-cards">
       <div class="cap-card">
         <span class="cap-highlight">40+ Years</span>
-         <p>Founder-led advisory with collective enterprise experience</p>
+         <p>Founder-led advisory with enterprise experience</p>
           </div>
 
           <div class="cap-card">
